Configuring Drupal styles

--- a/src/scss/framework/foundation/_settings.scss
+++ b/src/scss/framework/foundation/_settings.scss
@@ -5,6 +5,8 @@
 //
 // Style guide: framework.foundation.settings
 
+// scss-lint:disable LeadingZero, SpaceAfterComma, ColorVariable
+
 //  Foundation for Sites Settings
 //  -----------------------------
 //
