--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -15,3 +15,17 @@
 //
 // Style guide: framework
 @import 'framework/foundation/framework';
+
+// Components
+//
+// Style guide: components
+
+// Drupal
+//
+// Style guide: components.drupal
+@import 'components/drupal/drupal7';
+
+// Drupal Modules
+//
+// Style guide: components.drupal.modules
+@import 'components/drupal/modules/styleguide';
