--- a/src/scss/framework/foundation/_framework.scss
+++ b/src/scss/framework/foundation/_framework.scss
@@ -14,15 +14,15 @@
 @import 'foundation';
 
 // Import ALL Foundation components (not recommended)
-//@include foundation-everything;
+@include foundation-everything;
 
 // Import Foundation components individually
-@include foundation-global-styles;
-//@include foundation-xy-grid-classes;
-//@include foundation-grid;                                        // DEPRECATED
-//@include foundation-flex-grid;                                   // DEPRECATED
-@include foundation-flex-classes;
-@include foundation-typography;
+//@include foundation-global-styles;
+//@include foundation-xy-grid-classes;                   // USE CSS GRID INSTEAD
+//@include foundation-grid;                              // DEPRECATED
+//@include foundation-flex-grid;                         // DEPRECATED
+//@include foundation-flex-classes;
+//@include foundation-typography;
 //@include foundation-forms;
 //@include foundation-button;
 //@include foundation-accordion;
@@ -33,7 +33,7 @@
 //@include foundation-callout;
 //@include foundation-card;
 //@include foundation-close-button;
-@include foundation-menu;
+//@include foundation-menu;
 //@include foundation-menu-icon;
 //@include foundation-drilldown-menu;
 //@include foundation-dropdown;
