Setting up Foundation

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -33,3 +33,14 @@
 // Style guide: frontend.drupal.modules
 @import 'frontend/drupal/modules/styleguide';
 
+// Components
+//
+// Frontend Build is meant to be built using the
+// <a href="http://getbem.com/" target="_blank">BEM methodology</a>. This means
+// all styles should be self-contained components that follow a specific
+// naming convention. Once built, you can import your components here.
+//
+// Style guide: components
+
+//@import 'components/..'
+
