--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -33,6 +33,11 @@
 // Style guide: frontend.drupal.modules
 @import 'frontend/drupal/modules/styleguide';
 
+// WordPress
+//
+// Style guide: frontend.wordpress
+@import 'frontend/wordpress/wordpress';
+
 // Components
 //
 // Frontend Build is meant to be built using the
