--- a/src/scss/frontend/wordpress/_wordpress.scss
+++ b/src/scss/frontend/wordpress/_wordpress.scss
@@ -1,4 +1,4 @@
-// WYSIWYG Editor Styles
+// WYSIWYG Editor
 //
 // When you are working with WordPress’ WYSIWYG Editor in the Edit Post screen,
 // WordPress applies context-specific CSS attributes to certain elements when
