--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -26,17 +26,20 @@
 // Drupal
 //
 // Style guide: frontend.drupal
-@import 'frontend/drupal/drupal7';
+
+//@import 'frontend/drupal/drupal7';
 
 // Drupal Modules
 //
 // Style guide: frontend.drupal.modules
-@import 'frontend/drupal/modules/styleguide';
+
+//@import 'frontend/drupal/modules/styleguide';
 
 // WordPress
 //
 // Style guide: frontend.wordpress
-@import 'frontend/wordpress/wordpress';
+
+//@import 'frontend/wordpress/wordpress';
 
 // Components
 //
