--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -27,13 +27,13 @@
 //
 // Style guide: frontend.drupal
 
-//@import 'frontend/drupal/drupal7';
+@import 'frontend/drupal/drupal7';
 
 // Drupal Modules
 //
 // Style guide: frontend.drupal.modules
 
-//@import 'frontend/drupal/modules/styleguide';
+@import 'frontend/drupal/modules/styleguide';
 
 // WordPress
 //
