Added a container and CSS grid mixin and extendable.

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -23,6 +23,10 @@
 //
 // Style guide: frontend
 
+@import 'frontend/variables';
+@import 'frontend/mixins';
+@import 'frontend/common';
+
 // Drupal
 //
 // Style guide: frontend.drupal
