--- a/src/scss/frontend/_variables.scss
+++ b/src/scss/frontend/_variables.scss
@@ -1,10 +1,63 @@
 // Variables
 //
-// The variables file for Frontend Build components.
+// The variables file for Frontend Build components. Foundation is used by default in Frontend Build, so uses it's settings to define many of the default Frontend Build component variables. It's best to edit those variables from Foundation's <code>scss/framework/foundation/_settings.scss</code>. All other variables and custom variables should be defined in the <code>scss/_variables.scss</code> file.
+// <h5>Globals</h5>
+// <ul>
+//   <li><code>$global-width</code>: <code>$global-width</code> (<em>Foundation setting</em>)</li>
+//   <li><code>$global-margin</code>: <code>$global-margin</code> (<em>Foundation setting</em>)</li>
+//   <li><code>$global-padding</code>: <code>$global-padding</code> (<em>Foundation setting</em>)</li>
+//   <li><code>$global-radius</code>: <code>$global-radius</code> (<em>Foundation setting</em>)</li>
+//   <li><code>$global-weight-bold</code>: <code>$global-weight-bold</code> (<em>Foundation setting</em>)</li>
+// </ul>
+// <h5>Colors</h5>
+// <ul>
+//   <li><code>$primary-color</code>: <code>$primary-color</code> (<em>Foundation setting</em>)</li>
+//   <li><code>$alert-color</code>: <code>$alert-color</code> (<em>Foundation setting</em>)</li>
+//   <li><code>$success-color</code>: <code>$success-color</code> (<em>Foundation setting</em>)</li>
+//   <li><code>$warning-color</code>: <code>$warning-color</code> (<em>Foundation setting</em>)</li>
+//   <li><code>$dark-gray</code>: <code>$dark-gray</code> (<em>Foundation setting</em>)</li>
+//   <li><code>$medium-gray</code>: <code>$medium-gray</code> (<em>Foundation setting</em>)</li>
+//   <li><code>$light-gray</code>: <code>$light-gray</code> (<em>Foundation setting</em>)</li>
+// </ul>
+// <h5>Progress Bar</h5>
+// <ul>
+//   <li><code>$progress-background</code>: <code>$progress-background</code> (<em>Foundation setting</em>)</li>
+//   <li><code>$progress-margin-bottom</code>: <code>$progress-margin-bottom</code> (<em>Foundation setting</em>)</li>
+//   <li><code>$progress-radius</code>: <code>$progress-radius</code> (<em>Foundation setting</em>)</li>
+//   <li><code>$progress-meter-background</code>: <code>$progress-meter-background</code> (<em>Foundation setting</em>)</li>
+//   <li><code>$progress-height</code>: <code>$progress-height</code> (<em>Foundation setting</em>)</li>
+// </ul>
+// <h5>CSS Grid</h5>
+// <ul>
+//   <li><code>$css-grid-columns</code>: <code>(small: 2, medium: $grid-columns)</code> (<em>Foundation setting</em>)</li>
+//   <li><code>$css-grid-column-gaps</code>: <code>$grid-margin-gutters</code> (<em>Foundation setting</em>)</li>
+//   <li><code>$css-grid-row-gaps</code>: <code>(small: 0, medium: 0)</code></li>
+// </ul>
 //
 // Style guide: frontend.variables
 
-$global-width: $global-width                                           !default;
+// Globals
+$global-width:       $global-width                                     !default;
+$global-margin:      $global-margin                                    !default;
+$global-padding:     $global-padding                                   !default;
+$global-radius:      $global-radius                                    !default;
+$global-weight-bold: $global-weight-bold                               !default;
+
+// Colors
+$primary-color: $primary-color                                         !default;
+$alert-color:   $alert-color                                           !default;
+$success-color: $success-color                                         !default;
+$warning-color: $warning-color                                         !default;
+$dark-gray:     $dark-gray                                             !default;
+$medium-gray:   $medium-gray                                           !default;
+$light-gray:    $light-gray                                            !default;
+
+// Progress Bar
+$progress-background:       $progress-background                       !default;
+$progress-margin-bottom:    $progress-margin-bottom                    !default;
+$progress-radius:           $progress-radius                           !default;
+$progress-meter-background: $progress-meter-background                 !default;
+$progress-height:           $progress-height                           !default;
 
 // CSS Grid
 $css-grid-columns: (
