--- a/src/scss/framework/foundation/_framework.scss
+++ b/src/scss/framework/foundation/_framework.scss
@@ -17,15 +17,15 @@
 @import 'foundation';
 
 // Import ALL Foundation components (not recommended)
-//@include foundation-everything;
+@include foundation-everything;
 
 // Import Foundation components individually
-@include foundation-global-styles;
+//@include foundation-global-styles;
 //@include foundation-xy-grid-classes;                   // USE CSS GRID INSTEAD
 //@include foundation-grid;                              // DEPRECATED
 //@include foundation-flex-grid;                         // DEPRECATED
 //@include foundation-flex-classes;
-@include foundation-typography;
+//@include foundation-typography;
 //@include foundation-forms;
 //@include foundation-button;
 //@include foundation-accordion;
@@ -36,7 +36,7 @@
 //@include foundation-callout;
 //@include foundation-card;
 //@include foundation-close-button;
-@include foundation-menu;
+//@include foundation-menu;
 //@include foundation-menu-icon;
 //@include foundation-drilldown-menu;
 //@include foundation-dropdown;
